edited html file and first css file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ width, initial-scale=1.0">
     <main> 
         <h2>Raffique Muir</h2> 
         <p>I am a full time Worker and student, my current studies is majoring in Electronics and Computer Science Bsc. I am a consumer electronics and software developer at Vim Enterprisr Ltd. In my free time i try to learn new things and relax playing COD.</p> 
-        <!--<img src="drone.jpg" alt="drone pic" srcset="">-->
+        <img src="drone.jpg" alt="drone pic" srcset="">
     </main> 
     <footer> 
         <p>Copyright &copy; 2020 Raffique Muir.</p> 
